force-app/main/default/objects/department_master__c/department_master__c.object-meta.xml
<CustomObject>
    <label>部署マスタ</label>
    <nameField>
        <label>部署名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>