force-app/main/default/objects/department_master__c/fields/achievement_rate__c.field-meta.xml
<CustomField>
    <fullName>achievement_rate__c</fullName>
    <description>所属社員数 / 今期末目標社員数で算出しています。</description>
    <formula>department_employee_count__c / target_employee_count_current_period_end__c</formula>
    <inlineHelpText>所属社員数 / 今期末目標社員数で算出しています。</inlineHelpText>
    <label>達成率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>