force-app/main/default/objects/department_master__c/fields/department_code__c.field-meta.xml
<CustomField>
    <fullName>department_code__c</fullName>
    <externalId>true</externalId>
    <label>所属コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>