force-app/main/default/objects/department_master__c/fields/department_employee_count__c.field-meta.xml
<CustomField>
    <fullName>department_employee_count__c</fullName>
    <inlineHelpText>社員マスタから算出。
条件は入社日が今日以降（今日も含む）かつ、退職日が空欄もしくは未来日付の社員をカウント。</inlineHelpText>
    <label>所属社員数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>