force-app/main/default/objects/department_master__c/fields/FY_Termination_Count__c.field-meta.xml
<CustomField>
    <fullName>FY_Termination_Count__c</fullName>
    <description>今年度（4月〜翌3月）に退職した社員数（DLRS集計）</description>
    <inlineHelpText>関連する社員マスタから1日1回自動算出</inlineHelpText>
    <label>今年度退職者数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>