force-app/main/default/objects/department_master__c/fields/headquarters_name__c.field-meta.xml
<CustomField>
    <fullName>headquarters_name__c</fullName>
    <label>本部名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>