force-app/main/default/objects/department_master__c/fields/net_increase_target_number__c.field-meta.xml
<CustomField>
    <fullName>net_increase_target_number__c</fullName>
    <label>純増目標数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>