force-app/main/default/objects/department_master__c/fields/not_use__c.field-meta.xml
<CustomField>
    <fullName>not_use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>未使用チェック</label>
    <type>Checkbox</type>
</CustomField>