force-app/main/default/objects/department_master__c/fields/prior_period_end_employee_count__c.field-meta.xml
<CustomField>
    <fullName>prior_period_end_employee_count__c</fullName>
    <label>前期末社員数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>