force-app/main/default/objects/department_master__c/fields/remaining_slots__c.field-meta.xml
<CustomField>
    <fullName>remaining_slots__c</fullName>
    <formula>department_employee_count__c -  target_employee_count_current_period_end__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>所属社員数から今期末目標社員数を引いた数</inlineHelpText>
    <label>今期末目標社員数に対するビハインド</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>