force-app/main/default/objects/department_master__c/fields/target_employee_count__c.field-meta.xml
<CustomField>
    <fullName>target_employee_count__c</fullName>
    <inlineHelpText>募集マスタのレコード数合計を算出。
レコード自体が更新または、1日1回深夜に全件更新。</inlineHelpText>
    <label>募集社員数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>