force-app/main/default/objects/department_master__c/fields/target_employee_count_current_period_end__c.field-meta.xml
<CustomField>
    <fullName>target_employee_count_current_period_end__c</fullName>
    <description>前期末社員数 + 純増目標数で算出しています。</description>
    <formula>prior_period_end_employee_count__c + net_increase_target_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>前期末社員数 + 純増目標数で算出しています。</inlineHelpText>
    <label>今期末目標社員数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>