force-app/main/default/objects/department_master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>headquarters_name__c</columns>
    <columns>department_code__c</columns>
    <columns>not_use__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>not_use__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>すべて選択</label>
</ListView>